@@ -98,7 +98,6 @@ LOCAL MMDBW_node_s *new_node_from_record(MMDBW_tree_s *tree,
                                          MMDBW_record_s *record);
 LOCAL void free_node_and_subnodes(MMDBW_tree_s *tree, MMDBW_node_s *node);
 LOCAL void free_record_value(MMDBW_tree_s *tree, MMDBW_record_s *record);
-LOCAL void assign_node_numbers(MMDBW_tree_s *tree);
 LOCAL void assign_node_number(MMDBW_tree_s *tree, MMDBW_node_s *node,
                               uint128_t UNUSED(network),
                               uint8_t UNUSED(depth), void *UNUSED(args));
@@ -168,7 +167,6 @@ MMDBW_tree_s *new_tree(const uint8_t ip_version, uint8_t record_size,
     tree->record_size = record_size;
     tree->merge_strategy = merge_strategy;
     tree->data_table = NULL;
-    tree->is_finalized = false;
     tree->is_aliased = false;
     tree->root_node = new_node(tree);
     tree->node_count = 0;
@@ -970,7 +968,7 @@ LOCAL MMDBW_node_s *return_null(
 LOCAL MMDBW_node_s *new_node_from_record(MMDBW_tree_s *tree,
                                          MMDBW_record_s *record)
 {
-    MMDBW_node_s *node = new_node(tree);
+    MMDBW_node_s *node = new_node();
     if (MMDBW_RECORD_TYPE_DATA == record->type) {
         /* We only need to increment the reference count once as we are
            replacing the parent record */
@@ -986,14 +984,12 @@ LOCAL MMDBW_node_s *new_node_from_record(MMDBW_tree_s *tree,
     return node;
 }
 
-MMDBW_node_s *new_node(MMDBW_tree_s *tree)
+MMDBW_node_s *new_node()
 {
     MMDBW_node_s *node = checked_malloc(sizeof(MMDBW_node_s));
 
     node->number = 0;
     node->left_record.type = node->right_record.type = MMDBW_RECORD_TYPE_EMPTY;
-
-    tree->is_finalized = false;
 
     return node;
 }
@@ -1019,18 +1015,7 @@ LOCAL void free_record_value(MMDBW_tree_s *tree, MMDBW_record_s *record)
     /* We do not follow MMDBW_RECORD_TYPE_ALIAS nodes */
 }
 
-
-void finalize_tree(MMDBW_tree_s *tree)
-{
-    if (tree->is_finalized) {
-        return;
-    }
-
-    assign_node_numbers(tree);
-    tree->is_finalized = true;
-}
-
-LOCAL void assign_node_numbers(MMDBW_tree_s *tree)
+void assign_node_numbers(MMDBW_tree_s *tree)
 {
     tree->node_count = 0;
     start_iteration(tree, false, (void *)NULL, &assign_node_number);
@@ -1059,8 +1044,6 @@ LOCAL void assign_node_number(MMDBW_tree_s *tree, MMDBW_node_s *node,
 void freeze_tree(MMDBW_tree_s *tree, char *filename, char *frozen_params,
                  size_t frozen_params_size)
 {
-    finalize_tree(tree);
-
     int fd = open(filename, O_CREAT | O_TRUNC | O_RDWR, (mode_t)0644);
     if (-1 == fd) {
         croak("Could not open file %s: %s", filename, strerror(errno));
@@ -1265,8 +1248,6 @@ MMDBW_tree_s *thaw_tree(char *filename, uint32_t initial_offset,
 
     SvREFCNT_dec((SV *)data_hash);
 
-    finalize_tree(tree);
-
     return tree;
 }
 
@@ -1410,7 +1391,7 @@ LOCAL HV *thaw_data_hash(SV *data_to_decode)
 void write_search_tree(MMDBW_tree_s *tree, SV *output,
                        SV *root_data_type, SV *serializer)
 {
-    finalize_tree(tree);
+    assign_node_numbers(tree);
 
     /* This is a gross way to get around the fact that with C function
      * pointers we can't easily pass different params to different
