@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Fixed a bug where an incorrect node_count could be written to the database,
+  causing invalid metadata errors when reading it.
+- The node_count() method on the Tree object now always recalculates the node
+  count rather than using a possibly incorrect cached value.
+
+
 0.200000 2016-03-31
 
 [ BACKWARDS INCOMPATIBILITIES ]
